@@ -20,21 +20,21 @@ plugins {
     id 'application'
     id 'build-dashboard'
     id 'checkstyle'
-    id "com.github.spotbugs" version '4.7.1'
+    id "com.github.spotbugs" version '4.7.2'
     id 'java'
     id 'maven-publish'
     id 'pmd'
     id 'idea'
-    id "de.undercouch.download" version '4.1.1'
+    id "de.undercouch.download" version '4.1.2'
     id 'edu.sc.seis.launch4j' version '2.5.0'
-    id 'com.github.ben-manes.versions' version '0.38.0'
-    id "com.dorongold.task-tree" version '1.5'
+    id 'com.github.ben-manes.versions' version '0.39.0'
+    id "com.dorongold.task-tree" version '2.1.0'
     id 'org.openjfx.javafxplugin' version '0.0.10'
-    id 'org.beryx.runtime' version '1.12.4'
+    id 'org.beryx.runtime' version '1.12.5'
 }
 
 javafx {
-    version = "14.0.1"
+    version = "16"
     modules = [ 'javafx.controls', 'javafx.web', 'javafx.swing', 'javafx.fxml', 'javafx.graphics' ]
 
     //Check if running in ide. If so bundles javafx in to jar. If not only compiles so that runtime can add different platform javafx later.
@@ -50,8 +50,11 @@ description = """PCGen"""
 
 defaultTasks 'build'
 
-sourceCompatibility = "1.11"
-targetCompatibility = "1.11"
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(16)
+    }
+}
 
 ext {
     binDir = "code/bin"
@@ -83,7 +86,6 @@ repositories {
     maven {
         url "https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/"
     }
-    jcenter()
 }
 
 sourceSets {
@@ -162,13 +164,13 @@ compileJava {
 * https://docs.gradle.org/current/userguide/dependency_downgrade_and_exclude.html
 */
 dependencies {
-    implementation group: 'commons-io', name: 'commons-io', version:'2.8.0'
+    implementation group: 'commons-io', name: 'commons-io', version:'2.11.0'
 
-    implementation group: 'org.springframework', name: 'spring-web', version:'5.3.6'
-    implementation group: 'org.springframework', name: 'spring-beans', version:'5.3.6'
-    implementation group: 'org.springframework', name: 'spring-core', version:'5.3.6'
+    implementation group: 'org.springframework', name: 'spring-web', version:'5.3.8'
+    implementation group: 'org.springframework', name: 'spring-beans', version:'5.3.8'
+    implementation group: 'org.springframework', name: 'spring-core', version:'5.3.8'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version:'3.12.0'
-    compile('org.apache.xmlgraphics:fop:2.6')
+    implementation('org.apache.xmlgraphics:fop:2.6')
     {
         exclude group: 'xml-apis', module: 'xml-apis'
     }
@@ -187,15 +189,15 @@ dependencies {
     implementation group: 'net.sourceforge.pcgen', name: 'PCGen-base', version:'1.0.170'
     implementation group: 'net.sourceforge.pcgen', name: 'PCGen-Formula', version:'1.0.200'
 
-    compileOnly group: 'org.jetbrains', name: 'annotations', version:'20.1.0'
+    compileOnly group: 'org.jetbrains', name: 'annotations', version:'21.0.1'
     compileOnly group: 'com.yuvimasory', name: 'orange-extensions', version: '1.3.0'
-    compileOnly group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: '4.2.3'
+    compileOnly group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: '4.3.0'
 
-    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.7.1'
-    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.7.1'
-    testImplementation group: 'org.junit.jupiter', name:  'junit-jupiter-api', version: '5.7.1'
-    testImplementation group: 'org.junit.jupiter', name:  'junit-jupiter-params', version: '5.7.1'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1'
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.7.2'
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.7.2'
+    testImplementation group: 'org.junit.jupiter', name:  'junit-jupiter-api', version: '5.7.2'
+    testImplementation group: 'org.junit.jupiter', name:  'junit-jupiter-params', version: '5.7.2'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.2'
     testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
     testImplementation group: 'org.testfx', name: 'testfx-junit5', version: '4.0.16-alpha'
     testImplementation group: 'org.testfx', name: 'openjfx-monocle', version: 'jdk-12.0.1+2'
@@ -220,6 +222,7 @@ ext {
 
 jar {
     it.dependsOn 'jar-all-plugins'
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE // If we detect duplicate JARs ignore the subsequent ones
     manifest {
         attributes 'Implementation-Title': 'PCGen', 'Implementation-Version': archiveVersion,
                 'Main-Class': 'pcgen.system.Main', 'Class-Path': classpath
@@ -228,7 +231,6 @@ jar {
         configurations.runtimeClasspath.collect { it.directory ? it : zipTree(it) }
     }
 }
-
 
 runtime {
     options = ['--compress', '2']
@@ -326,7 +328,7 @@ artifacts {
 
 task copyToLibs(type: Copy) {
     into "$buildDir/libs"
-    from configurations.runtime
+    from configurations.runtimeClasspath
 }
 
 task copyToOutput(type: Copy, dependsOn: [createExe, copyToLibs, jar,
@@ -354,7 +356,6 @@ task qbuild(type: Copy, dependsOn: [copyToOutput, jar]) {
     mustRunAfter clean
 }
 
-
 task cleanOutput(type: Delete) {
     description="Clean up things copied to the output folder by the build"
     delete outputDir
@@ -373,6 +374,8 @@ build {
     it.dependsOn 'copyToOutput'
 }
 
+// TODO This clean isn not as nuclear as it perhaps should be.  For jlink and friends to work when you get odd Zip errors
+// you will also need to clean out .grade/ output/ bin/ jre/ and mods/
 clean {
     it.dependsOn 'clean-plugins'
     it.dependsOn 'cleanOutput'
@@ -382,9 +385,9 @@ clean {
 build.mustRunAfter clean
 
 task downloadJRE {
-    def major = 14
+    def major = 16
     def archs = ['x64','x32']
-    def osList = ['windows', 'mac','linux']
+    def osList = ['windows', 'mac', 'linux']
     def extension = 'zip'
     osList.each{
         def os = "${it}"
@@ -461,9 +464,9 @@ task downloadJRE {
     }
 }
 
-
 task downloadJavaFXModules(dependsOn: downloadJRE) {
-    def major = "14-0-1"
+    //def major = "16-0-1"
+    def major = "16"
     def archs = ['x64', 'x86']
     def osList = ["windows", "mac", "linux"]
 
@@ -568,9 +571,7 @@ tasks.runtime.dependsOn(downloadJavaFXModules)
 
 test {
     exclude 'pcgen/testsupport/**'
-
     useJUnitPlatform()
-
 }
 
 task itest(type: Test, dependsOn: [jar]) {
@@ -649,7 +650,7 @@ allprojects {
         options.addBooleanOption('Xdoclint:none', true)
     }
     tasks.withType(Test) {
-        maxHeapSize = "512m"
+        maxHeapSize = "1024m"
         maxParallelForks = 1
         enableAssertions = true
         testLogging {
@@ -667,14 +668,15 @@ allprojects {
                 "--module-path", "${projectDir}/mods/lib/",
                 "--add-modules", "javafx.controls,javafx.web,javafx.swing,javafx.fxml",
 
-                //Needed to fix issue with testfx test crashing due to issue with modularity of whole program. Slightly related issue. https://github.com/TestFX/TestFX/issues/638
-                '--add-exports','javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
-                '--add-opens','javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
-
+                // Needed to fix issue with testfx test crashing due to issue with modularity of whole program. Slightly related issue. https://github.com/TestFX/TestFX/issues/638
+                '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+                '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+                '--enable-preview'
         ]
     }
     tasks.withType(JavaCompile) {
         doFirst {
+            it.options.compilerArgs.add('--enable-preview')
 
             if (name.toLowerCase().contains("test")) {
                 options.compilerArgs << "--module-path" << "${projectDir}/mods/lib/"
@@ -684,11 +686,20 @@ allprojects {
 
         }
     }
+    // https://youtrack.jetbrains.com/issue/KT-46165
+    tasks.withType(org.gradle.jvm.tasks.Jar) {
+        duplicatesStrategy = DuplicatesStrategy.WARN
+    }
+    tasks.withType(JavaExec) {
+        jvmArgs += '--enable-preview'
+        maxHeapSize = "2048m"
+    }
 }
 
 dependencyUpdates {
     revision='release'
 }
+
 dependencyUpdates.resolutionStrategy {
     componentSelection { rules ->
         rules.all { ComponentSelection selection ->
@@ -728,7 +739,6 @@ idea {
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
-
 
 apply from: 'code/gradle/autobuild.gradle'
 apply from: 'code/gradle/distribution.gradle'
